// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManualChecklistDialog > renders correctly 1`] = `
<div
  data-v-fd712cd7=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-fd712cd7=""
    iconcolor="secondary-text"
    id="dialog-toolbar"
    title="Start checklist 10:42"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0"
    data-v-fd712cd7=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list pt-4"
      data-v-fd712cd7=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object],[object Object],[object Object]"
      primaryactionicon=""
      primaryactiontext="Start_verb"
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      selectable="true"
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-fd712cd7=""
    tag="div"
  >
    <v-spacer-stub
      data-v-fd712cd7=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-fd712cd7=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ManualChecklistDialog > renders correctly in mobile view 1`] = `
<div
  data-v-fd712cd7=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-fd712cd7=""
    iconcolor="secondary-text"
    id="dialog-toolbar"
    title="Start checklist 10:42"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0"
    data-v-fd712cd7=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list pt-4 card-list--mobile"
      data-v-fd712cd7=""
      dense="true"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object],[object Object],[object Object]"
      primaryactionicon=""
      primaryactiontext="Start_verb"
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      selectable="true"
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-fd712cd7=""
    tag="div"
  >
    <v-spacer-stub
      data-v-fd712cd7=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-fd712cd7=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ManualChecklistDialog > renders correctly in tablet view 1`] = `
<div
  data-v-fd712cd7=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-fd712cd7=""
    iconcolor="secondary-text"
    id="dialog-toolbar"
    title="Start checklist 10:42"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0"
    data-v-fd712cd7=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list pt-4 card-list--tablet"
      data-v-fd712cd7=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object],[object Object],[object Object]"
      primaryactionicon=""
      primaryactiontext="Start_verb"
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      selectable="true"
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-fd712cd7=""
    tag="div"
  >
    <v-spacer-stub
      data-v-fd712cd7=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-fd712cd7=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
